tests/baselines/reference/reactNamespaceInvalidInput.errors.txt
error TS5059: Invalid value for '--reactNamespace'. 'my-React-Lib' is not a valid identifier.
reactNamespaceInvalidInput.tsx(1,2): error TS2874: This JSX tag requires 'my-React-Lib' to be in scope, but it could not be found.


!!! error TS5059: Invalid value for '--reactNamespace'. 'my-React-Lib' is not a valid identifier.
==== reactNamespaceInvalidInput.tsx (1 errors) ====
    <foo data/>;
     ~~~
!!! error TS2874: This JSX tag requires 'my-React-Lib' to be in scope, but it could not be found.
    